crates/core/tests/proc/fn/on_ty.stderr
error: Empty structs are not allowed unless marked as #[ffi(opaque)] or #[ffi(service)].
 --> tests/proc/fn/on_ty.rs:4:8
  |
4 | struct Foo;
  |        ^^^
