crates/core/tests/proc/fn/on_ty.rs
use interoptopus::ffi;

#[ffi]
struct Foo;

#[allow(dead_code)]
fn main() {}
